--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>jackson-dataformat-properties</artifactId>
             <version>2.9.4</version>
         </dependency>
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
